--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,17 @@
 body {
-    background-color: #f4f9f4;
+  background-color: #f4f9f4;
 }
 
-h1, h3 {
-    color: #66bfbf;
+h1,
+h3 {
+  color: #66bfbf;
 }
 
 hr {
-    /* background-color: white; */
-    border-style: none;
-    border-top-style: dotted;
-    border-color: grey;
-    border-width: 6px;
-    width: 5%;
+  /* background-color: white; */
+  border-style: none;
+  border-top-style: dotted;
+  border-color: grey;
+  border-width: 6px;
+  width: 5%;
 }
